test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/nested_union_init_too_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  {
  double
  identifier(d)
  ;
  int
  identifier(x)
  ;
  }
  ;
  union
  identifier(u)
  identifier(array_of_unions)
  [
  const int(3)
  ]
  =
  {
  {
  const double(1.0)
  ,
  const double(2.0)
  ,
  const double(3.0)
  }
  }
  ;
  }
